@@ -1,2 +1,0 @@
-test/*.sqlite
-test/sql_stmt_tests/*.sqlite
